--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,12 +15,35 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+/* width of bar */
+::-webkit-scrollbar {
+  width: 5px;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(211, 199, 199);
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(211, 199, 199);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(211, 199, 199);
+}
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #0d0a0b;
+  /* background-image: linear-gradient(315deg, #0d0a0b 0%, #009fc2 74%); */
   /* background-color: #111; */
-  background-color: #000;
+  /* background-color: #000; */
+
   color: #bbb;
 }
 a {
@@ -64,35 +87,51 @@ input:focus {
 input[type="number"] {
   -moz-appearance: textfield;
 }
-
-/* .preview .preview-inner .card div {
-  display: flex;
-  align-items: center;
-  gap: 5px;
+.card {
+  background: rgba(26, 20, 20, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(1.5px);
+  -webkit-backdrop-filter: blur(1.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
-.preview span {
-  font-weight: 800;
-  font-size: 18px;
-  font-style: italic;
-  color: #15ba5c;
-  text-transform: capitalize;
+.avatarWrapper {
+  background: rgba(26, 20, 20, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(1.5px);
+  -webkit-backdrop-filter: blur(1.5px);
+  /* border-radius: 10px; */
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
-.preview p {
-  font-size: 20px;
-  font-weight: bold;
-  text-transform: capitalize;
+.sidebar {
+  /* background: rgba(0, 113, 249, 0.25); */
+  background: rgba(26, 20, 20, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
-.preview h1 {
-  font-size: 22px;
-  text-transform: uppercase;
-  padding-bottom: 10px;
+.sTable {
+  /* background: rgba(0, 113, 249, 0.25); */
+  background: rgba(26, 20, 20, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.24);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  /* border-top-left-radius: 0; */
+  /* border-bottom-left-radius: 0; */
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
-.card-header {
-  box-shadow: rgba(31, 33, 33, 0.196) 0px 50px 100px -20px,
-    rgba(89, 105, 93, 0.211) 0px 30px 60px -30px;
-  border-top-right-radius: 20px;
-  border-bottom-left-radius: 20px;
-  margin-bottom: 10px;
-  background: #fff;
-  padding: 10px;
-} */
+.subCard {
+  background: rgba(0, 113, 249, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.3);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 8px;
+  /* border-top-left-radius: 0;
+  border-bottom-left-radius: 0; */
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
