--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@ body {
   /* background-color: #111; */
   /* background-color: #000; */
 
-  color: #bbb;
+  color: #fff;
 }
 a {
   text-decoration: none;
@@ -95,6 +95,7 @@ input[type="number"] {
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
+
 .avatarWrapper {
   background: rgba(26, 20, 20, 0.15);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -103,9 +104,17 @@ input[type="number"] {
   /* border-radius: 10px; */
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
+.inputWrapper {
+  background: rgba(26, 20, 20, 0.15);
+  /* box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(1.5px);
+  -webkit-backdrop-filter: blur(1.5px); */
+  /* border-radius: 10px; */
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
 .sidebar {
   /* background: rgba(0, 113, 249, 0.25); */
-  background: rgba(26, 20, 20, 0.15);
+  background: rgba(26, 20, 20, 0.2);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
@@ -113,6 +122,7 @@ input[type="number"] {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   border: 1px solid rgba(255, 255, 255, 0.18);
+  /* color: #fff; */
 }
 .sTable {
   /* background: rgba(0, 113, 249, 0.25); */
