--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,7 +39,10 @@
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: #0d0a0b;
+  min-height: 100vh;
+  /* height: 100%; */
+  position: relative;
+  /* background-color: #0d0a0b; */
   /* bg-[#] */
   /* background-image: linear-gradient(315deg, #0d0a0b 0%, #009fc2 74%); */
   /* background-color: #111; */
