--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,16 +129,10 @@ input[type="number"] {
 }
 .sidebar {
   /* background: rgba(0, 113, 249, 0.25); */
-  background: rgba(26, 20, 20, 0.2);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  /* background: rgba(26, 20, 20, 0.2);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37); */
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
-  /* border-radius: 10px; */
-  /* border-top-left-radius: 0; */
-  /* border-bottom-left-radius: 0; */
-  /* border: 1px solid rgba(255, 255, 255, 0.18); */
-  /* color: #fff; */
-  /* margin-right: 100px; */
 }
 .sTable {
   /* background: rgba(0, 113, 249, 0.25); */
